Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10320

NO-OP ALTER TABLE on temporary tables getting logged under row binlog format

Details

    Description

      Temporary table operations should never get replicated under row-based replication.

      How to repeat:

      --source include/master-slave.inc
      --source include/have_binlog_format_row.inc
      connection master;
      CREATE TEMPORARY TABLE t1(i INT PRIMARY KEY) ENGINE=MYISAM;
      ALTER TABLE t1;
      ALTER TABLE t1 ADD COLUMN IF NOT EXISTS I INT;
      DROP TABLE t1;
      --source include/rpl_end.inc
      

      Error on slave:

      2016-07-01 13:10:50 140508493802240 [ERROR] Slave SQL: Error 'Table 'test.t1' doesn't exist' on query. Default database: 'test'. Query: 'ALTER TABLE t1', Gtid 0-1-1, Internal MariaDB error code: 1146
      2016-07-01 13:10:50 140508493802240 [Warning] Slave: Table 'test.t1' doesn't exist Error_code: 1146
      

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              nirbhay_c Nirbhay Choubey (Inactive)
              nirbhay_c Nirbhay Choubey (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.